# issp

./: .gitignore  LICENSE  README.md
high_level/: .gitignore  README.md  pyproject.toml
high_level/00_symmetric_crypto/: 00_plaintext.py  02_ecb.py  03_cbc.py  04_ctr.py  05_key_mitm.py
high_level/00_symmetric_crypto/solutions/: 00_plaintext.py  01_otp.py  02_ecb.py  03_cbc.py  04_ctr.py  06_kdc.py
high_level/01_hash_mac/: 01_mac_crypt.py  02_mac_keyed.py  03_mac_cbc.py  04_mac_brute_force.py
high_level/01_hash_mac/solutions/: 00_hash_digest.py  01_mac_crypt.py  02_mac_keyed.py  03_mac_cbc.py  04_mac_brute_force.py
high_level/02_asymmetric_crypto/solutions/: 01_rsa_xor_sign.py  03_sign_encrypt.py  04_rsa_mitm.py
high_level/03_rng/: 01_hash_rng.py  03_fortuna.py
high_level/03_rng/solutions/: 00_lcg.py  01_hash_rng.py  02_ansi_x917.py
high_level/04_authentication/: 00_password_brute_force.py  02_password_salt_attack.py  03_naive_auth.py  04_hotp.py  05_totp.py  06_challenge_response.py  07_biometric.py
high_level/04_authentication/solutions/: 00_password_brute_force.py  03_naive_auth.py  05_totp.py  06_challenge_response.py  07_biometric.py
high_level/05_access_control/: 02_rbac.py
high_level/05_access_control/solutions/: 02_rbac.py
high_level/exercises/: 00_plaintext.py  01_otp.py  02_ecb.py  03_cbc.py  04_ctr.py  05_aes.py  05_key_mitm.py  06_kdc.py  06_key_mitm.py  07_hash_digest.py  08_mac_crypt.py  09_mac_keyed.py  10_mac_cbc.py  11_mac_brute_force.py  12_rsa_sign.py  12_xor_hash.py  13_rsa_xor_sign.py  14_envelope.py  15_sign_encrypt.py  16_rsa_mitm.py  17_lcg.py  18_hash_rng.py  19_ansi_x917.py  21_password_brute_force.py  22_password_dict_attack.py  24_naive_auth.py  27_challenge_response.py  28_biometric.py  29_mac.py  30_dac.py  32_abac.py
high_level/solutions/: 00_plaintext.py  01_otp.py  02_ecb.py  03_cbc.py  04_ctr.py  05_key_mitm.py  06_kdc.py  07_hash_digest.py  08_mac_crypt.py  09_mac_keyed.py  10_mac_cbc.py  11_mac_brute_force.py  12_rsa_sign.py  13_rsa_xor_sign.py  14_envelope.py  15_sign_encrypt.py  16_rsa_mitm.py  17_lcg.py  18_hash_rng.py  19_ansi_x917.py  20_fortuna.py  21_password_brute_force.py  22_password_dict_attack.py  23_password_salt_attack.py  25_hotp.py  29_mac.py  30_dac.py  32_abac.py
high_level/src/issp/: __init__.py  _bio.py  _bytes.py  _comm.py  _communication.py  _log.py  (+10 more)
low_level/: .clangd  CMakeLists.txt  README.md
low_level/c_exercises/: 00_otp.c  02_stream.c
low_level/examples/: 00_syntax.c  01_types.c  02_arrays.c  03_strings.c  04_pointers.c  05_array_pointers.c  06_func_pointers.c  07_buffer_overflow.c  08_struct.c  09_dynamic.c  utils.h
low_level/exercises/: 01_mac.c
low_level/hackmes/: 00_admin_pass_flag.c  01_admin_pass_string.c  02_shellcode_simple.c  03_shellcode_auth.c  04_shellcode_obo.c  05_echo_leak.c  06_user_name_len.c  07_pin_leak.c  08_pass_leak.c  09_canary.c  10_exploit_chain.c  README.md
(+17 files in other folders)
